Fix logics that checks whether `TextLineSpacingCommand` is enabled.

--- a/src/ui/czi-custom-button.css
+++ b/src/ui/czi-custom-button.css
@@ -60,6 +60,7 @@
 
 .czi-custom-button.disabled,
 .czi-custom-button.disabled:hover {
+  -webkit-text-stroke-width: 0;
   background: #ffffff;
   border-color: #ccc;
   color: #dedede;
